--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 #baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
-url: "http://zhouyunlab.github.io/index8"
+url: "http://zhouyunlab.github.io/index8.html"
 baseurl: "/index8.html"
 
 # Of course don't forget to change the username and projectname to YOUR username and project
